<resources>
    <string name="app_name">SmartPillowApp</string>
    <string name="title">Smarter Pillow</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="default_time">00:00</string>
    <string name="default_alarm_text">Alarm not set</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="yesterday">Yesterday\'s Sleep Quality</string>
    <string name="hours_slept">Hours Slept: </string>
    <string name="snore">Snore: </string>
    <string name="movement">Movement: </string>
    <string name="toggle_recording">Start Recording</string>
    <string name="stop_recording">Stop</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pick_date">Select a Date</string>
</resources>